# sequel

./: .env.example  .gitignore  001_make_event_fks_nullable.sql  Dockerfile  README.md  app_local.db  docker-compose.yml  final_test.ps1  final_test.sh  init.sql  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cache.py  database.py  main.py  models.py  schemas.py  seed.py
app/routers/: events.py  urls.py  users.py
artifacts/documentation/: load-test-results.md
backend/: requirements.txt
backend/data/: events.csv  urls.csv  users.csv
backend/tests/: conftest.py  test_api.py
docs/: README.md  api.md  architecture.md  capacity-plan.md  config.md  decision-log.md  deploy.md  runbooks.md  troubleshooting.md
docs/Incident-Response/: INCIDENT_RESPONSE.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.jsx  styles.css
frontend/src/app/: critical.css  globals.css  layout.tsx
frontend/src/app/(public)/: loading.tsx  page.tsx
frontend/src/components/analytics/: geo-chart.tsx  traffic-chart.tsx
frontend/src/components/landing/: about.tsx  comparison.tsx  final-cta.tsx  hero-shortener.tsx  how-it-works.tsx  index.ts  innovations.tsx  social-proof.tsx  sre-pitch.tsx
frontend/src/components/shared/: footer.tsx  navbar.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/lib/: api.ts  constants.ts
infra/nginx/: nginx.conf
monitoring/: alert-rules.yml  grafana-setup.md  prometheus.yml  uptime-config.md
nginx/: nginx.conf
scripts/: load-test.sh  locustfile.py
(+5 files in other folders)
