[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30",
    "faker>=33.0",
    "fastapi>=0.115",
    "flask>=3.1",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "peewee>=3.17",
    "pydantic>=2.10",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "uvicorn>=0.34",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
